--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header>
     <div class="header-content">
       <h1>יקב בוטיק בן דוברה</h1>
@@ -58,11 +59,11 @@
     <section id="gallery">
       <h2>רגעים מהיקב</h2>
       <div class="gallery-grid">
-        <img src="1.png" alt="בקבוק יין אדום על חבית עץ">
-        <img src="2.png" alt="כוס יין לבן צונן">
-        <img src="3.png" alt="שורה של בקבוקי יין רוזה">
-        <img src="4.png" alt="כרם ענבים בשעת בוקר מוקדמת">
-        <img src="5.png" alt="חבית יין במרתף היקב">
+        <img src="gallery1.jpg" alt="תמונה מהיקב 1">
+        <img src="gallery2.jpg" alt="תמונה מהיקב 2">
+        <img src="gallery3.jpg" alt="תמונה מהיקב 3">
+        <img src="gallery4.jpg" alt="תמונה מהיקב 4">
+        <img src="gallery5.jpg" alt="תמונה מהיקב 5">
       </div>
     </section>
 
