--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
 
+  <div id="background-container">
+    <div class="background-slide" style="background-image: url('bg1.jpg');"></div>
+    <div class="background-slide" style="background-image: url('bg2.jpg');"></div>
+    <div class="background-slide" style="background-image: url('bg3.jpg');"></div>
+    <div class="background-slide" style="background-image: url('bg4.jpg');"></div>
+  </div>
+
   <header>
     <div class="header-content">
       <h1>יקב בוטיק בן דוברה</h1>
