--- a/W8.html
+++ b/W8.html
@@ -1459,7 +1459,7 @@
             transition: color var(--animation-speed);
         }
 
-        /* --- Project Details Card (Status Symbol) --- */
+     /* --- Project Details Card (Status Symbol) --- */
 .project-details-card {
     position: fixed; /* Changed to fixed */
     top: 15px;      /* Changed to 15px from top */
@@ -1475,7 +1475,7 @@
     font-family: 'Heebo', sans-serif;
     text-align: right; /* RTL */
     transition: all var(--animation-speed) ease-in-out; /* Smooth transition for hover/active effects */
-    /* max-height: calc(100vh - 150px); /* This line is now effectively superseded by 'height' */
+    /* Removed max-height, as height is now fixed */
     overflow-y: auto; /* Enable scrolling within the card */
     overflow-x: hidden; /* Hide horizontal scrollbar if content is too wide */
 }
@@ -1534,6 +1534,83 @@
     box-sizing: border-box;
     background-color: var(--card-background);
     color: var(--text-color);
+}
+/* Scrollbar styling for .project-details-card */
+.project-details-card::-webkit-scrollbar {
+    width: 8px; /* Width of the scrollbar */
+    background-color: transparent; /* Make it transparent by default */
+}
+
+.project-details-card::-webkit-scrollbar-thumb {
+    background-color: transparent; /* Hide the thumb by default */
+    border-radius: 4px; /* Rounded corners for the thumb */
+}
+
+.project-details-card::-webkit-scrollbar-track {
+    background-color: transparent; /* Hide the track by default */
+}
+
+/* Show scrollbar thumb and track only on hover over the card */
+.project-details-card:hover::-webkit-scrollbar-thumb {
+    background-color: rgba(139, 0, 0, 0.5); /* Semi-transparent wine red on hover */
+}
+
+.project-details-card:hover::-webkit-scrollbar-track {
+    background-color: rgba(139, 0, 0, 0.1); /* Very light semi-transparent wine red on hover */
+}
+
+/* Dark mode scrollbar styles */
+body.dark-mode .project-details-card::-webkit-scrollbar-thumb {
+    background-color: transparent; /* Hide thumb in dark mode by default */
+}
+body.dark-mode .project-details-card:hover::-webkit-scrollbar-thumb {
+    background-color: rgba(184, 0, 0, 0.5); /* Semi-transparent dark primary on hover */
+}
+body.dark-mode .project-details-card:hover::-webkit-scrollbar-track {
+    background-color: rgba(184, 0, 0, 0.1); /* Very light semi-transparent dark primary on hover */
+}
+
+/* Style for custom added properties */
+.project-details-item.custom-property .detail-value {
+    background-color: var(--background-color); /* Slightly different background for custom fields */
+    border-radius: 5px;
+    padding: 2px 5px;
+    min-height: 1.5em; /* Ensure clickable area */
+}
+.project-details-item.custom-property:hover .detail-value {
+     background-color: #f0f0f0;
+}
+.project-details-item.custom-property .delete-custom-prop-btn {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 3px 6px;
+    font-size: 0.7em;
+    cursor: pointer;
+    margin-left: 5px;
+    flex-shrink: 0; /* Prevent button from shrinking */
+    transition: background-color 0.2s ease;
+}
+.project-details-item.custom-property .delete-custom-prop-btn:hover {
+    background-color: #d32f2f;
+}
+
+.add-custom-property-btn {
+    background-color: #87CEEB; /* Changed to SkyBlue */
+    color: white;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 0.9em;
+    font-weight: 700;
+    transition: background-color 0.3s ease;
+    width: 100%;
+    margin-top: 15px;
+}
+.add-custom-property-btn:hover {
+    background-color: #6495ED; /* Darker SkyBlue on hover */
 }
 /* Style for custom added properties */
 .project-details-item.custom-property .detail-value {
