--- a/W8.html
+++ b/W8.html
@@ -2128,7 +2128,7 @@ body.dark-mode .project-details-card:hover::-webkit-scrollbar-track {
     },
     'stage1': {
         name: 'בציר', // השם הקצר
-        longName: 'בציר (איסוף הענבים)', // השם המלא שיוצג בכפתורים
+        longName: 'בציר', // השם המלא שיוצג בכפתורים
         emoji: '🟢',
         metrics: {
             'brix': { name: 'בריקס', type: 'number', step: 0.1, precision: 1, placeholder: '22.5' },
