עדכון תוכן האתר: סיפור יין, FAQ ופרטי כתובת

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
       </div>
       <nav>
         <a href="#shop">היינות שלנו</a>
-        <a href="#philosophy">פילוסופיית היקב</a>
+        <a href="#story">סיפור היין</a>
         <a href="#experience">חוויית אירוח</a>
         <a href="#testimonials">ביקורות</a>
         <a href="#gallery">גלריה</a>
         <a href="#about">עלינו</a>
+        <a href="#faq">שאלות נפוצות</a>
         <a href="#contact">יצירת קשר</a>
       </nav>
       <button id="cart-toggle" class="cart-toggle" aria-label="פתיחת סל הקניות">🛒 <span id="nav-cart-count">0</span></button>
@@ -44,7 +45,7 @@
         <p class="subtitle">ברוכים הבאים ליקב דורות. יינות פרימיום שנבנים בשכבות של ארומה, עומק וסיומת ארוכה — בדיוק כמו חוויה מקצועית של יקב מוביל.</p>
         <div class="hero-actions">
           <a class="primary-btn" href="#shop">לרכישת קולקציית היקב</a>
-          <a class="ghost-btn" href="#philosophy">לקרוא על הטרואר והיישון</a>
+          <a class="ghost-btn" href="#story">לקרוא את סיפור היין</a>
         </div>
         <div class="hero-badges">
           <span>חביות עץ אלון צרפתי</span>
@@ -99,9 +100,12 @@
       </div>
     </section>
 
-    <section id="philosophy" class="text-section">
-      <h2>פילוסופיית היקב</h2>
-      <p>אנחנו עובדים בגישת "Luxury with Restraint" — פחות רעש, יותר עומק. הענבים נבצרים בשעות הבוקר המוקדמות, עוברים מיון ידני, ותהליך יישון מבוקר שמבליט מורכבות, ניקיון ואלגנטיות. כל יין מקבל אפיון הגשה, טמפרטורה מומלצת והתאמה קולינרית מקצועית.</p>
+    <section id="story" class="text-section">
+      <h2>סיפור היין שלנו</h2>
+      <p>בלי סיסמאות ובלי פילוסופיות — היין שלנו מתחיל בכרמים שנמצאים במפגש בין אדמה גירית לרוח קרירה מהערב. הענבים נבצרים לפנות בוקר, כשהטמפרטורה עדיין נמוכה, כדי לשמור על רעננות טבעית ועל ריכוז מדויק של סוכר וחומצה.</p>
+      <p>אחרי הבציר, האשכולות נכנסים למיון כפול: מיון ידני ראשוני בכרם ולאחר מכן מיון קפדני ביקב. כל זן עובר תסיסה נפרדת במכלי נירוסטה או בחביות פתוחות, בהתאם לפרופיל הארומטי שרוצים לבנות. בשלב הזה נוצרים הטעמים הראשונים: פרי שחור עמוק בזנים האדומים, פרי הדר ותפוח ירוק בזנים הלבנים.</p>
+      <p>מקור הטעם מגיע משלושה גורמים עיקריים: אזור הגידול, משך היישון והחבית. קרקע עשירה במינרלים מעניקה תחושה יבשה ומדויקת, יישון על שמרים עדינים מוסיף עומק, והחבית תורמת שכבות של וניל, קקאו ותבלין עדין. כך מתקבל יין שיש לו איזון בין פרי טרי לבין מורכבות בשלה.</p>
+      <p>בפה, המרקם משתנה מבקבוק לבקבוק: יש יינות עם גוף בינוני ומגע משיי, ויש כאלה עם גוף מלא וטאנין מודגש שמחזיק סיומת ארוכה. אנחנו מקפידים שכל יין יקבל תיאור ברור באתר — מה מריחים, מה טועמים, עם איזה אוכל הוא עובד הכי טוב, ובאיזו טמפרטורה להגיש אותו כדי להוציא את המקסימום.</p>
     </section>
 
     <section id="experience" class="feature-section">
@@ -153,6 +157,24 @@
 
     <section id="about" class="text-section"></section>
 
+    <section id="faq">
+      <h2>שאלות נפוצות</h2>
+      <div class="faq-grid">
+        <div class="faq-item">
+          <h3>תוך כמה זמן המשלוח מגיע?</h3>
+          <p>ברוב האזורים בארץ בין 2 ל-5 ימי עסקים, עם הודעת עדכון לפני הגעה.</p>
+        </div>
+        <div class="faq-item">
+          <h3>אפשר לקבל המלצה לפי ארוחה?</h3>
+          <p>כן. כתבו לנו בתיבת יצירת הקשר ואנחנו נתאים בקבוק לסגנון הבישול ולתקציב.</p>
+        </div>
+        <div class="faq-item">
+          <h3>היינות כשרים?</h3>
+          <p>חלק מהקולקציה כשרה וחלקה אינה כשרה. בכל עמוד מוצר מצוינת הכשרות הרלוונטית.</p>
+        </div>
+      </div>
+    </section>
+
     <section class="cta-band">
       <div>
         <h2>הזמינו סשן טעימה פרטי ביקב</h2>
@@ -194,7 +216,26 @@
   </aside>
 
   <footer>
-    <p>© כל הזכויות שמורות ליקב בוטיק דורות, 2025</p>
+    <div class="footer-grid">
+      <div>
+        <h3>יקב בוטיק דורות</h3>
+        <p>© כל הזכויות שמורות, 2025</p>
+      </div>
+      <div>
+        <h3>כתובת היקב</h3>
+        <p>דרך הכרמים 18, אזור תעשייה צפוני, אשקלון</p>
+      </div>
+      <div>
+        <h3>יצירת קשר</h3>
+        <p>טלפון: 08-6001234</p>
+        <p>אימייל: hello@dorot-winery.co.il</p>
+      </div>
+      <div>
+        <h3>שעות פעילות</h3>
+        <p>א׳-ה׳: 09:00-18:00</p>
+        <p>ו׳: 09:00-13:00</p>
+      </div>
+    </div>
   </footer>
 
   <div id="imageModal" class="modal">
